<resources>
    <string name="app_name">BookXChange</string>
    <string name="login">Login</string>
    <string name="loginPassword">Password</string>
    <string name="email">Email</string>
    <string name="new_to_our_app">New to our app?</string>
    <string name="enter_your_first_name">Enter your first name…</string>
    <string name="enter_your_last_name">Enter your last name…</string>
    <string name="example">example@school.edu</string>
    <string name="sign_up">Sign Up</string>
    <string name="about">About</string>
    <string name="txtAbout">Random information about our app.</string>
    <string name="txtRegPassword">Enter a password …</string>
    <string name="txtRegPasswordConfirm">Re-enter password …</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="enter_book_title">Enter Book Title</string>
    <string name="enter_author_s">Enter Author(s)</string>
    <string name="enter_price">Enter Price</string>
    <string name="todo">todo</string>
    <string name="change_password">Change Password</string>
    <string name="submit_password">Submit</string>
    <string name="enter_new_password">Enter new password…</string>
    <string name="confirm_new_password">Confirm new password…</string>
    <string name="image_logo">logo</string>
    <string name="enter_edition">Enter Edition</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="image_photo_upload">Photo Upload Image</string>
    <string name="upload_photo">upload photo</string>
    <string name="create_post">Create Post</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_out">Log Out</string>

    <string-array name="condition_array">
        <item>--Select Condition--</item>
        <item>Poor</item>
        <item>Fair</item>
        <item>Good</item>
        <item>New</item>
    </string-array>
    <string name="title_activity_sell_tabbed">SellActivityTabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="active_posts">Active Posts</string>
    <string name="sold_books">Sold Books</string>
    <string name="node_elasticsearch">elasticsearch</string>
    <string name="field_password">password</string>

    <!-- Fragment Names -->
    <string name="fragment_search">Search</string>
    <string name="fragment_watch_list">Watch List</string>
    <string name="fragment_post">Post</string>
    <string name="fragment_view_book">Book</string>
    <string name="fragment_account">Account</string>

    <string name="arg_book_id">arg_book_id</string>
    <string name="title_activity_sell3">SellActivity3</string>


    <!-- About page info -->
    <string name="terms_1">By entering your email, logging into your account, or accepting notifications, you agree to receive personalized BookXchange notifications each day. You may unsubscribe at any time.</string>
    <string name="terms_2">Welcome to the BookXChange Mobile App (defined below). By using it, you are agreeing to these Terms of Use (defined below). Please read them carefully. If you have any questions, please email us at bookxchange18@gmail.com</string>
    <string name="terms_3">These Terms of Use were last updated on April 23, 2019.</string>
    <string name="terms_4">ACCEPTANCE OF TERMS OF USE</string>
    <string name="terms_5">BookXChange, Inc. (“BookXChange” "we" or “us” or “our”) owns and operates the mobile applicatuon, BookXChange, the mobile and touch versions and any sites we have now or in the future that reference these Terms of Use (collectively, "Site"). By (a) using the Site and BookXchange’s services through the Site, (b) signing up for an account and/or © completing a purchase on the Site, you agree to these Terms of Use (defined below) and any additional terms applicable to certain programs in which you may elect to participate. You also agree to our Privacy Statement, incorporated herein by reference and located at http://www.BookXchange.com/privacy ("Privacy Statement"), and acknowledge that you will regularly visit the Terms of Use (defined below) to familiarize yourself with any updates. The Privacy Statement, together with these terms of use, and any other terms contained herein or incorporated herein by reference, are collectively referred to as the "Terms of Use." The term "using" also includes any person or entity that accesses or uses the Site with crawlers, robots, data mining, or extraction tools or any other functionality.</string>
    <string name="terms_6">IF YOU DO NOT AGREE TO THESE TERMS OF USE, IMMEDIATELY STOP USING THE SITE AND DO NOT USE ANY BOOKXCHANGE SERVICE, PARTICIPATE IN ANY PROGRAM OR PURCHASE ANY VOUCHER, PRODUCT OR OTHER GOOD OR SERVICE OFFERED THROUGH THE SITE.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="name">Name:</string>
    <string name="e_mail">E-mail:</string>
    <string name="school">School:</string>
    <string name="message_seller">message seller</string>
    <string name="price">Price</string>
    <string name="condition">Condition</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="edition">Edition</string>
    <string name="isbn">ISBN</string>
    <string name="initials_default">XX</string>
    <string name="buy_books">Buy Books</string>
    <string name="type_a_message">Type a message…</string>
    <string name="button_send">button send</string>
    <string name="no_active_posts_to_display">no active posts to display…</string>
    <string name="sold_books_empty">you have not sold any books yet…</string>
    <string name="enter_tags">Enter tags (math, algebra, trig)</string>
    <string name="register">Register</string>
    <string name="details">details</string>
    <string name="recieve_message">hello</string>
    <string name="search_hint">Search…</string>
    <string name="marked_as_sold">MARKED AS SOLD</string>
    <string name="mark_as_sold">mark as sold</string>
    <string name="username">username</string>
</resources>
