<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="12dp"
    android:orientation="horizontal"
    android:weightSum="2"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        tools:ignore="InefficientWeight,UselessParent">

        <ImageView
            android:id="@+id/imgBookPhoto"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/notebook"
            android:contentDescription="@string/image_photo_upload" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtISBN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/author"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txtCondition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/condition"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtSOLD"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/marked_as_sold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/btnSold"
                            android:layout_width="151dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/rounded_button"
                            android:text="@string/mark_as_sold"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp"
                            android:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>