<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:autofillHints=""
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="211dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txtNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="142dp"
        android:text="@string/new_to_our_app"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_marginLeft="-64dp"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_marginStart="-64dp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtNew"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/txtNew"
        android:layout_toRightOf="@+id/txtNew"
        android:clickable="true"
        android:linksClickable="true"
        android:text="@string/sign_up"
        android:textColor="@android:color/holo_red_dark"
        android:textColorLink="@android:color/holo_red_dark"
        android:focusable="true" />

</RelativeLayout>