<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinnerSchool"
        android:layout_alignRight="@+id/spinnerSchool"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="95dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_first_name"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/enter_your_last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="213dp"
        android:ems="10"
        android:hint="@string/example"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/spinnerSchool"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="128dp"
        android:entries="@array/school_array"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>